--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/animations": "^7.1.0",
     "@angular/cdk": "^7.1.0",
     "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
+    "@angular/compiler": "^7.2.6",
     "@angular/core": "^7.1.0",
     "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "^7.1.0",
@@ -36,7 +36,6 @@
     "@ngrx/effects": "^7.1.0",
     "@ngrx/router-store": "^7.1.0",
     "@ngrx/store": "^7.1.0",
-    "ag-grid-angular": "^19.1.2",
     "ag-grid-community": "^19.1.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
@@ -53,7 +52,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^23.3.10",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
+    "codelyzer": "^4.5.0",
     "jest": "^23.6.0",
     "jest-preset-angular": "^6.0.2",
     "protractor": "~5.4.0",
