--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
     "@ngrx/store-devtools": "^7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jest": "^23.3.10",
+    "@types/jest": "^23.3.14",
     "@types/node": "~8.9.4",
     "codelyzer": "^4.5.0",
     "jest": "^23.6.0",
+    "jest-marbles": "^2.3.0",
     "jest-preset-angular": "^6.0.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
