--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest": "^23.6.0",
     "jest-marbles": "^2.3.0",
     "jest-preset-angular": "^6.0.2",
+    "prettier": "^1.16.4",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
