--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "^3.1.6"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
