--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
     "@ngrx/effects": "^7.1.0",
     "@ngrx/router-store": "^7.1.0",
     "@ngrx/store": "^7.1.0",
+    "@stomp/ng2-stompjs": "^7.2.0",
     "ag-grid-community": "^19.1.4",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "karma": "^4.0.0",
+    "net": "^1.0.2",
     "rxjs": "~6.3.3",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
