--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.0",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.2.6",
-    "@angular/core": "^7.1.0",
+    "@angular/animations": "^12.0.0-next.6",
+    "@angular/cdk": "^11.2.6",
+    "@angular/common": "^12.0.0-next.6",
+    "@angular/compiler": "^12.0.0-next.6",
+    "@angular/core": "^12.0.0-next.6",
     "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "^7.1.0",
+    "@angular/forms": "^12.0.0-next.6",
     "@angular/http": "^7.1.0",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
-    "@ngrx/effects": "^7.1.0",
-    "@ngrx/router-store": "^7.1.0",
-    "@ngrx/store": "^7.1.0",
+    "@angular/platform-browser": "^12.0.0-next.6",
+    "@angular/platform-browser-dynamic": "^12.0.0-next.6",
+    "@angular/router": "^12.0.0-next.6",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/router-store": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
     "@stomp/ng2-stompjs": "^7.2.0",
     "ag-grid-community": "^19.1.4",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "karma": "^4.0.0",
     "net": "^1.0.2",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.6.6",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~7.1.0",
-    "@angular/compiler-cli": "^7.1.0",
-    "@angular/language-service": "^7.1.0",
-    "@ngrx/schematics": "^7.1.0",
-    "@ngrx/store-devtools": "^7.1.0",
+    "@angular-devkit/build-angular": "^0.1102.6",
+    "@angular/cli": "~11.2.6",
+    "@angular/compiler-cli": "^12.0.0-next.6",
+    "@angular/language-service": "^12.0.0-next.6",
+    "@ngrx/schematics": "^11.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^23.3.14",
@@ -66,7 +66,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.1.6"
+    "typescript": "^4.1.5"
   },
   "prettier": {
     "singleQuote": true
